tests/baselines/reference/tsxStatelessFunctionComponentWithDefaultTypeParameter2.errors.txt
tests/cases/conformance/jsx/file.tsx(13,24): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    import React = require('react')
    
    interface MyComponentProp {
        values: string;
    }
    
    function MyComponent1<T extends MyComponentProp>(attr: T) {
        return <div>attr.values</div>
    }
    
    
    // Error
    let i1 = <MyComponent1 values={5}/>;
                           ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.